--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -19,6 +19,16 @@ jobs:
         CFLAGS=-O0 ./Config -quick
         make -C build -j 4
         make -C build install
+    - name: Make artefact tarball
+      run: |-
+        cd ~
+        tar -czf artefacts-{software_id}.tar.gz .local/ go/
+    - name: Upload build artefacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: installed-anope
+        path: artefacts-*.tar.gz
+        retention-days: 1
   publish-test-results:
     if: success() || failure()
     name: Publish Unit Tests Results
@@ -50,6 +60,8 @@ jobs:
       with:
         name: installed-limnoria
         path: '~'
+    - name: unpack artefacts
+      run: tar -xf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
@@ -85,6 +97,8 @@ jobs:
       with:
         name: installed-sopel
         path: '~'
+    - name: unpack artefacts
+      run: tar -xf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
