--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-anope
-        path: artefacts-*.tar.gz
+        path: ~/artefacts-*.tar.gz
         retention-days: 1
   build-limnoria:
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-limnoria
-        path: artefacts-*.tar.gz
+        path: ~/artefacts-*.tar.gz
         retention-days: 1
   build-sopel:
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-sopel
-        path: artefacts-*.tar.gz
+        path: ~/artefacts-*.tar.gz
         retention-days: 1
   publish-test-results:
     if: success() || failure()
