--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -20,9 +20,7 @@ jobs:
         make -C build -j 4
         make -C build install
     - name: Make artefact tarball
-      run: |-
-        cd ~
-        tar -czf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -czf artefacts-{software_id}.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
@@ -44,9 +42,7 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
     - name: Make artefact tarball
-      run: |-
-        cd ~
-        tar -czf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -czf artefacts-{software_id}.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
@@ -68,9 +64,7 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
     - name: Make artefact tarball
-      run: |-
-        cd ~
-        tar -czf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -czf artefacts-{software_id}.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
