--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -58,8 +58,8 @@ jobs:
       with:
         name: installed-limnoria
         path: '~'
-    - name: unpack artefacts
-      run: tar -xf artefacts-*.tar.gz
+    - name: Unpack artefacts
+      run: cd ~; tar -xf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
@@ -95,8 +95,8 @@ jobs:
       with:
         name: installed-sopel
         path: '~'
-    - name: unpack artefacts
-      run: tar -xf artefacts-*.tar.gz
+    - name: Unpack artefacts
+      run: cd ~; tar -xf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
