--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -39,6 +39,11 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Install dependencies
       run: pip install limnoria==2021.06.15 cryptography
     - name: Make artefact tarball
@@ -61,6 +66,11 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Install dependencies
       run: pip install sopel==7.1.1
     - name: Make artefact tarball
