--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -20,7 +20,7 @@ jobs:
         make -C build -j 4
         make -C build install
     - name: Make artefact tarball
-      run: cd ~; tar -czf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -cvzf artefacts-{software_id}.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
@@ -59,7 +59,7 @@ jobs:
         name: installed-limnoria
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; tar -xvf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
@@ -96,7 +96,7 @@ jobs:
         name: installed-sopel
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; tar -xvf artefacts-*.tar.gz
     - name: look at downloads
       run: |-
         ls -la ~
