--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -20,7 +20,7 @@ jobs:
         make -C build -j 4
         make -C build install
     - name: Make artefact tarball
-      run: cd ~; tar -cvzf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -cvzf artefacts-anope.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
@@ -47,7 +47,7 @@ jobs:
     - name: Install dependencies
       run: pip install limnoria==2021.06.15 cryptography
     - name: Make artefact tarball
-      run: cd ~; tar -cvzf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -cvzf artefacts-limnoria.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
@@ -74,7 +74,7 @@ jobs:
     - name: Install dependencies
       run: pip install sopel==7.1.1
     - name: Make artefact tarball
-      run: cd ~; tar -cvzf artefacts-{software_id}.tar.gz .local/ go/
+      run: cd ~; tar -cvzf artefacts-sopel.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
